Alhamdulillah bug fixed: Dark mode problem solving

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@
 }
 .completePage{
   max-width: 2150px;
-  margin-top: 91px;
   text-align: left;
-
+  background: white;
 }
 .h60{
   height: 60px;
