--- a/src/pages/HomePage/Sections/AreasOfInterest/AreasOfInterest.css
+++ b/src/pages/HomePage/Sections/AreasOfInterest/AreasOfInterest.css
@@ -4,6 +4,8 @@
     padding-right: 200px;
     height: 1000px;
     align-content: center;
+    background: #ffffff;
+    color: black;
 }
 
 .AreasOfInterest>div {
