--- a/src/pages/NavBar/NavBar.css
+++ b/src/pages/NavBar/NavBar.css
@@ -10,7 +10,7 @@
     padding-left: 200px;
     padding-right: 200px;
 
-    position: fixed;
+    position: sticky;
     width: 100%;
     top: 0;
     z-index: 1000;
